<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallup"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.tsm.me.tp2_gps.StartActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/startText"
        android:textSize="18sp"
        android:textColor="#009688"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="215dp"
        android:layout_height="25dp"
        android:layout_alignParentEnd="true"
        android:gravity="end"
        android:layout_above="@+id/routes_name"
        android:background="@drawable/testing_gradient"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/routes_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="60dp"
            android:spinnerMode="dropdown"/>

    </RelativeLayout>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/routes_name"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/startButton"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/testing_gradient"
        android:paddingStart="10dp"
        android:paddingEnd="60dp"
        android:textSize="18sp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/route_name_hint"
        android:imeOptions="actionDone"
        android:inputType="textNoSuggestions"
        android:lines="1"
        android:maxLines="1" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startButton"
        android:textSize="12sp"
        android:layout_above="@+id/line_separator"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"/>

    <View
        android:id="@+id/line_separator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:background="#009688" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line_separator"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/syncText"
        android:textSize="18sp"
        android:textColor="#009688"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/syncButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/syncButton"
        android:textSize="12sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/password"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_above="@id/syncButton"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/testing_gradient"
        android:paddingStart="10dp"
        android:paddingEnd="60dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password_hint"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:lines="1"
        android:maxLines="1" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/username"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_above="@id/password"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/testing_gradient"
        android:paddingStart="10dp"
        android:paddingEnd="60dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/username_hint"
        android:imeOptions="actionDone"
        android:inputType="textNoSuggestions"
        android:lines="1"
        android:maxLines="1" />



</RelativeLayout>
