<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallup"
    tools:context="com.tsm.me.tp2_gps.MainActivity">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <Button
            android:id="@+id/sos"
            android:layout_width="200dp"
            android:layout_height="90dp"
            android:text="@string/sosButton"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"
            android:background="@android:color/holo_red_light"/>
        <TextView
            android:id="@+id/lat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sos"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:textSize="18sp"
            android:textColor="#009688"
            android:background="@drawable/testing_gradient"
            android:paddingStart="10dp"
            android:paddingEnd="60dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/lng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lat"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:textSize="18sp"
            android:textColor="#009688"
            android:background="@drawable/testing_gradient"
            android:paddingStart="10dp"
            android:paddingEnd="60dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lng"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:textSize="18sp"
            android:textColor="#009688"
            android:background="@drawable/testing_gradient"
            android:paddingStart="10dp"
            android:paddingEnd="60dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/time"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:textColor="#009688"
            android:background="@drawable/testing_gradient"
            android:paddingStart="10dp"
            android:paddingEnd="60dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/sms_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sms"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:textSize="18sp"
            android:textColor="#009688"
            android:background="@drawable/testing_gradient"
            android:paddingStart="10dp"
            android:paddingEnd="60dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/default_sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sms_time"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:textColor="#009688"
            android:background="@drawable/testing_gradient"
            android:paddingStart="10dp"
            android:paddingEnd="60dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/default_loc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/default_sms"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:textSize="18sp"
            android:textColor="#009688"
            android:background="@drawable/testing_gradient"
            android:paddingStart="10dp"
            android:paddingEnd="60dp"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/stopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stopButton"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/send"
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_above="@+id/stopButton"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/testing_gradient"
            android:paddingStart="10dp"
            android:paddingEnd="60dp"
            android:ems="10"
            android:hint="@string/sms_time"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:lines="1"
            android:maxLines="1" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/fetch"
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_above="@+id/send"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/testing_gradient"
            android:paddingStart="10dp"
            android:paddingEnd="60dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/location_time"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:lines="1"
            android:maxLines="1" />
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
